# mekong-cuda

./: CMakeLists.txt  ISSUES.md  LICENSE.TXT  README.md  llvm-enable-mekong.diff
cmake/: FindCUDAh.cmake
include/llvm/Analysis/: PValue.h  PolyhedralAccessInfo.h  PolyhedralDependenceInfo.h  PolyhedralExpressionBuilder.h  PolyhedralUtils.h  PolyhedralValueInfo.h
include/mekong/: InitializePasses.h  IslBuilder.h  LinkAllPasses.h  MeModel.h  Passes.h  RegisterPasses.h
lib/: CMakeLists.txt  IslBuilder.cpp  MeAnalyzeBuffers.cpp  MeCodegen.cpp  MeKernelAnalysis.cpp  MeKernelSubgrid.cpp  MeModel.cpp  MeReplaceCuda.cpp  Mekong.cpp  RegisterPasses.cpp
lib/Analysis/: PValue.cpp  PolyhedralAccessInfo.cpp  PolyhedralDependenceInfo.cpp  PolyhedralExpressionBuilder.cpp  PolyhedralUtils.cpp  PolyhedralValueInfo.cpp
lib/Analysis/isl/: CMakeLists.txt
lib/Runtime/include/: VirtualBuffer.h  btree_memtracker.h  me-runtime-private.h  me-runtime.h
lib/Runtime/src/: me-runtime.cpp  me-runtime.cu
lib/lua/: cargs.lua
llvm-patches/: 0000-base.txt  0001-Lit-Python2.patch  0002-Add-arcanist-linter-files.patch  0004-LLVM-pseudo-LTO-scripts.patch  0005-Fixes-and-improvements.patch  0006-WIP.patch  0007-Some-new-functions-work-on-the-Cuda-rewriter.patch  0008-Fixes-PVA.patch  0009-Update-isl.patch  0010-WIP.patch  0011-Less-warnings-in-PValue.h.patch  0012-Fixed-bug-from-last-commit-base-destructor-now-empty.patch  0013-Tried-to-fix-mmult-example-but-potentially-broke-som.patch  0014-Moved-CUDA-intrinsic-renaming-into-NVVMRewriter.patch  0015-Fixes-I-think.patch  0016-quieter-analysis.patch  0017-added-test-case-without-loops.patch  0018-added-CHECK-LABELS-in-loops_1d_strided.ll-to-localiz.patch  0019-fixed-domain_simple.ll-isl-changed-printing-order-of.patch  0020-added-CHECK-LABELS-to-conditionals_simple.patch  0021-tests-fixed-loops_early_exits.ll-isl-printing-order.patch  0022-added-simple-struct-test.patch  0023-WIP-Byte-Wise-Access-Info.patch  0024-WIP-Bugfixes-Bytewise-analysis.patch  0025-Try-to-make-things-work.patch  0026-Improve-naming-of-parameters.patch  0027-Do-not-create-multiple-dimensions-for-the-block-offs.patch  0028-Compute-PWA-gcd-from-input-and-param-dimensions.patch  0029-Rewrite-the-bytes-access-maps.patch
tools/: CMakeLists.txt  mekc  mekongcc  mekongrw
