configure_file(mekongcc ${LLVM_BINARY_DIR}/bin/mekongcc @ONLY)
install(FILES ${LLVM_BINARY_DIR}/bin/mekongcc
  DESTINATION bin
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
     GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)


file(COPY mekongrw
  DESTINATION ${LLVM_BINARY_DIR}/bin)
install(FILES ${LLVM_BINARY_DIR}/bin/mekongrw
  DESTINATION bin
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
     GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)

configure_file(mekc ${LLVM_BINARY_DIR}/bin/mekc @ONLY)
install(FILES ${LLVM_BINARY_DIR}/bin/mekc
  DESTINATION bin
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
     GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
