configure_file(mekongrw ${LLVM_BINARY_DIR}/bin/mekongrw @ONLY)
install(FILES ${LLVM_BINARY_DIR}/bin/mekongrw
  DESTINATION bin
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
     GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)

configure_file(mekc ${LLVM_BINARY_DIR}/bin/mekc @ONLY)
install(FILES ${LLVM_BINARY_DIR}/bin/mekc
  DESTINATION bin
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
     GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
